# adv_mla_lab_8

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
adv_mla_lab_8/: __init__.py  dataset.py  features.py  plots.py
adv_mla_lab_8/modeling/: predict.py  train.py
data/: raw.dvc
